FIX homepage dash alignment and welcome text styling

--- a/css/global.css
+++ b/css/global.css
@@ -782,7 +782,9 @@ width: 90px;
 /* Dash Styling */
 #HomePanelContainer {
   width: 100%;
-  padding: 10px 0px;
+}
+#SlideshowContainer {
+	float:left;
 }
 #HomePanelContainer a {-webkit-user-drag: none;}
 .HomePanelPromotedIN h2, .HomePanelPromotedIN h3 {
