--- a/css/slideshow_big.css
+++ b/css/slideshow_big.css
@@ -22,4 +22,4 @@
 #HomeSiteTextInner{padding:15px;}
 #HomeSiteText h1,#HomeSiteText p {color:#fff;}
 #HomeSiteText p {padding-bottom:8px;}
-#HomePanelContainer {float: left;}
+#HomePanelContainer {float: left; padding: 10px 0px;}
